tests/ui/compile-fail/init/missing_error_type.stderr
error: unexpected end of input, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
 --> tests/ui/compile-fail/init/missing_error_type.rs:8:13
  |
8 |     let _ = try_init!(Foo { x: Box::new(0)? }?);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `try_init` (in Nightly builds, run with -Z macro-backtrace for more info)
